--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://camiladamasio.github.io/recipes-app-project",
   "name": "recipes-app-test",
   "version": "0.1.0",
   "private": true,
@@ -32,6 +33,8 @@
     "websocket-extensions": ">=0.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "cy": "cypress run",
     "cy:open": "cypress open",
     "start": "react-scripts start",
@@ -64,6 +67,7 @@
     "eslint-config-trybe-frontend": "1.2.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "fs-extra": "^9.0.1",
+    "gh-pages": "^3.2.3",
     "mocha": "^8.0.1",
     "mochawesome": "^6.1.1",
     "mochawesome-merge": "^4.1.0",
